--- a/styles/globals.css
+++ b/styles/globals.css
@@ -334,15 +334,14 @@ text-align: end;
 .banner-desc .left p{
   margin:18px;
 }
-.footer-banner-image{
+.footer-banner-image {
   position: absolute;
-  width: 6px;
-
-  /* top: -35%;
-  left: 8%; */
   top: -25%;
   left: 25%;
+  width: 35pc;
+  object-fit: cover; /* Isto garante que a imagem cubra o espaço sem distorcer */
 }
+
 .banner-desc .right{
   line-height: 1.4;
 }
@@ -382,20 +381,26 @@ text-align: end;
   color: #324d67;
   text-align: center;
   margin-top: 20px;
-  padding: 30px 10px;
+  padding: 30px 20px;
   font-weight: 700;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   justify-content: center;
+}
 
+.icons-container {
+  display: flex; /* Usar flex para alinhar os ícones horizontalmente */
+  gap: 20px; /* Espaçamento entre os ícones */
 }
-.footer-container .icons{
+
+.footer-container .icons {
   font-size: 30px;
-  display: flex;
-  gap: 10px;
 }
+
+
+
  .cart-heading{
   display: flex;
   align-items: center;
